# tg_summarizer

./: .env.example  .gitignore  AUTOWORK_INSTRUCTIONS.md  Dockerfile  README.md  TODO.md  autowork.sh  build_lambda_package.sh  channel_manager.py  config.py  history_manager.py  lambda_handler.py  message_processor.py  models.py  prompts.py  pyproject.toml  requirements.txt  run_summarizer.sh  s3_sync.py  samconfig.toml.example  summarizer.py  telegram_client.py  template.yaml  utils.py
.autowork/: project.env
.github/workflows/: ci.yml
docs/: aws-lambda-deployment.md  aws-lambda-runbook.md
hooks/: pre-push
tests/: test_channel_manager.py  test_digest_post_processing.py  test_history_manager.py  test_lambda_handler.py  test_models.py  test_openai_config.py  test_process_messages_integration.py  test_s3_sync.py  test_summary_length_guardrails.py
