[project]
name = "tg-summarizer"
version = "0.1.0"
description = "Автоматический сборщик и суммаризатор сообщений из Telegram-каналов с использованием OpenAI GPT."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "telethon (>=1.40.0,<2.0.0)",
    "openai (>=1.99.9,<2.0.0)",
    "fire (>=0.7.0,<0.8.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
